<resources>
    <string name="link">
        <![CDATA[
        <h1>Hello World</h1>
        And here is a
        <a href="http://d.android.com">link</a>.]]>
    </string>
    <string name="app_name">PocketCS</string>
    <string name="facebook_app_id">707235632774989</string>
    <string name="cancel_login">Login Cancelled</string>
    <string name="error_login">Error logging in</string>

    <string name="Welcome">Welcome</string>
    <string name="Logout">Logout</string>
    <string name="welcome">Welcome!</string>
    <string name="user_s_first_name">user\'s first name</string>
    <string name="lastname">lastname</string>
    <string name="pocketcslogo">pocketCSLogo</string>
    <string name="userId">user id</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="Community">Community</string>
    <string name="Settings">Settings</string>
    <string name="Quizzes">Quizzes</string>
    <string name="Profile">Profile</string>
    <string name="Home">Home</string>
    <string name="Algorithms">Algorithms</string>
    <string name="DataStructures">Data Structures</string>
    <string name="SoftwareDesignPatterns">Software Design Patterns</string>
    <string name="aboutButton">About</string>
    <string name="About">About</string>
    <string name="title_activity_category_data_display">CategoryDataDisplay</string>
    <string name="AboutMessage">PocketCS was created by computer science students for computer science students who wish to prepare for a technical interview or are simply looking to brush up on their CS fundamentals.</string>
    <string name="AppInfoID">App Info</string>
    <string name="numalgo">numalgo</string>
    <string name="name">name</string>
    <string name="numds">numDS</string>
    <string name="numsw">numSW</string>
    <string name="pocket_cs">Pocket CS</string>
    <string name="user_image">user image</string>
    <string name="_00_00_49">00:00:49</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="score_0">Score : 0</string>
    <string name="question">question</string>
    <string name="play_again">PLAY AGAIN</string>

    <string name="lowQuizScore">"Looks like you could use a few more study sessions.\n"
                    "Try reviewing your CS concepts by looking at our explanations."</string>

    <string name="midQuizScore">"You are on your way to understanding your CS concepts well,"
                    "keep it up!"</string>

    <string name="highQuizScore">"Way to go! You got all the answers correct!"</string>
    <string name="number_of_software_design_patterns">Number of Software Design Patterns</string>
    <string name="a_short_bio_of_the_user">A short bio of the user</string>
    <string name="number_of_algorithms">Number of Algorithms</string>
    <string name="number_of_data_structures">Number of Data Structures</string>
    <string name="joseph_molina">Joseph Molina</string>
</resources>
