<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/Home_menu_item"
    android:title="@string/Home"
        android:icon="@mipmap/ic_home_black_24dp"/>

    <item android:id="@+id/Profile_menu_item"
        android:title="@string/Profile"
        android:icon="@mipmap/ic_person_black_24dp"/>

    <item android:id="@+id/Community_menu_item"
        android:title="@string/Community"
        android:icon="@mipmap/ic_public_black_24dp"/>

    <item android:id="@+id/Quizzes_menu_item"
        android:title="@string/Quizzes"
        android:icon="@mipmap/ic_edit_black_24dp">
        <menu>
            <item
                android:id="@+id/algorithms_quiz_menu_item"
                android:title="@string/Algorithms"/>

            <item
                android:id="@+id/datastructures_quiz_menu_item"
                android:title="@string/DataStructures"/>

            <item
                android:id="@+id/softwareDesign_quiz_menu_item"
                android:title="@string/SoftwareDesignPatterns"/>
        </menu>
    </item>

    <item android:id="@+id/Setting_menu_item"
        android:title="@string/Settings"
        android:icon="@mipmap/ic_settings_black_24dp">
        <menu>
            <item android:id="@+id/About_menu_item"
                android:title="@string/About"
                android:icon="@mipmap/ic_group_black_24dp">
            </item>
            <item android:id="@+id/Logout_menu_item"
                android:title="@string/Logout"
                android:icon="@mipmap/ic_exit_to_app_black_24dp">
            </item>
        </menu>
    </item>


</menu>