<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/headerImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profileheader"/>

        <com.facebook.login.widget.ProfilePictureView
            android:id="@+id/userProfilePhoto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@id/headerImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            android:background="@drawable/circularshape"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop">
        </com.facebook.login.widget.ProfilePictureView>

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headerImage"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:paddingBottom="24dp"
            >

            <ImageView
                android:id="@+id/dropDownOptionMenu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />
            <TextView
                android:id="@+id/userProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:text="@string/joseph_molina"
                android:textColor="#ffffff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userBio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/userProfileName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/a_short_bio_of_the_user"
                android:textColor="#ffffff"
                android:textSize="14sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="#ffffff"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/number_of_algorithms" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#ffffff"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/number_of_data_structures" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:background="#ffffff"
                android:elevation="4dp"
                android:padding="20dp"
                android:text="@string/number_of_software_design_patterns" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>