<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="edu.csumb.moli9479.applicationpocketcs.MainActivity"
    android:id="@+id/drawerLayout"
    android:background="#C5CAE9">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/pocketcslogo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/transparentpocketcslogo"
            android:contentDescription="@string/pocketcslogo" />
        <com.facebook.login.widget.ProfilePictureView
             android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:ignore="ObsoleteLayoutParam,UnknownId"
            android:layout_gravity="bottom"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="18dp"
            android:visibility="gone">
         </com.facebook.login.widget.ProfilePictureView>


        <TextView
            android:text="TextView"
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/pocketcslogo"
            android:layout_alignRight="@+id/nameTextView"
            android:layout_alignEnd="@+id/nameTextView"
            android:id="@+id/idTextView"
            android:visibility="gone"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_below="@+id/pocketcslogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <Button
                    android:id="@+id/AlgorithmsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Algorithms"
                    android:background="@drawable/algobuttonstyle"
                    android:textColor="#F0F0F0"
                    android:textAlignment="center"
                    tools:ignore="RtlHardcoded" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/AlgorithmsButton"
                    android:text="@string/DataStructures"
                    android:id="@+id/DataStructuresButton"
                    android:background="@drawable/dsbuttonstyle"
                    tools:ignore="RtlHardcoded" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/SoftwareDesignPatternButton"
                    android:text="@string/SoftwareDesignPatterns"
                    android:background="@drawable/softwaredesignstyle"
                    android:textColor="#F0F0F0"
                    android:textSize="13sp"
                    tools:ignore="RtlHardcoded" />
            </TableRow>
        </TableLayout>

    </RelativeLayout>
    <android.support.design.widget.NavigationView
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"
        app:itemBackground="@drawable/pressed_gray"
        android:layout_gravity="start">
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>





